1.修复卡片加载问题

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -267,6 +267,8 @@
     "retry": "Retry",
     "notLoggedIn": "Please login to view Web3 analysis data",
     "loginPrompt": "Click the extension icon to login",
+    "loginRequired": "Please login first",
+    "loginRequiredDesc": "Login to view KOL analysis data",
     "userInfo": "User Information",
     "kolFollowing": "KOL Following",
     "followers": "followers",
