🐛fix: 修复KOL卡片加载错误以及文案 💄style:  添加隐私政策以及服务条款

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -50,12 +50,12 @@
     "userInfo": "User Info",
     "kolSettings": "KOL Display Settings",
     "showKolList": "Show KOL List",
-    "showKolListDesc": "Display followed KOL list on Twitter pages",
+    "showKolListDesc": "Display KOL followers list on Twitter pages",
     "twitterSettings": "Twitter Settings",
     "autoQueryTitle": "Auto Query Twitter Data",
     "autoQueryDesc": "Automatically display data when visiting user profiles",
     "showKolListTitle": "Show KOL List",
-    "showKolListShortDesc": "Display followed KOL list"
+    "showKolListShortDesc": "Display KOL followers list"
   },
   "login": {
     "serverStatusCheck": "Server Status Check",
@@ -147,6 +147,52 @@
     "usageGuidelines": "Usage Guidelines",
     "byUsingExtension": "By using this extension, you agree to:",
     "termsAcknowledge": "Checking this box indicates that you have read, understood, and agree to be bound by these terms.",
+    "privacyPolicy": "Privacy Policy",
+    "serviceTerms": "Terms of Service",
+    "lastUpdated": "Last Updated",
+    "introduction": "Introduction",
+    "privacyIntro": "At Tw3Track, we are committed to protecting your privacy. This privacy policy explains how we handle information when you use our browser extension and services.",
+    "dataCollection": "Data Collection",
+    "dataCollectionDesc": "We do not collect, store, or transmit any personal information or sensitive browser data. Our extension runs locally on your device and respects your privacy.",
+    "noPersonalDataCollection": "No Personal Data Collection",
+    "noBrowsingHistory": "We do not access your browsing history",
+    "noPersonalInfoCollection": "We do not collect personal information",
+    "noOnlineTracking": "We do not track your online activities",
+    "noSensitiveBrowserInfo": "We do not access sensitive browser information",
+    "localDataProcessing": "All data processing is done locally on your device",
+    "localDataStorage": "Local Data Storage",
+    "localDataStorageDesc": "Any notes or annotations you create are stored locally in your browser. You have complete control over this data and can export or delete it at any time.",
+    "userNotesDataUsage": "User Notes Data Usage",
+    "userNotesDataUsageDesc": "When you use Twitter notes or wallet notes features, your note content may be used to improve plugin data display, enhance service functionality, and provide better user experience. This includes using your note data to improve data accuracy, develop new features, and optimize overall service quality. Using these features indicates your consent to this data usage.",
+    "openSourceTransparency": "Open Source & Transparency",
+    "openSourceTransparencyDesc": "Our extension is completely open source and auditable. You can review our code at any time to verify our privacy practices.",
+    "termsAcceptance": "Terms Acceptance",
+    "termsAcceptanceDesc": "By downloading, installing, or using the Tw3Track browser extension, you agree to be bound by these terms of service. If you do not agree to these terms, please do not use our service.",
+    "serviceDescription": "Service Description",
+    "serviceDescriptionDesc": "Tw3Track is a browser extension that provides Web3 Twitter analysis, wallet tracking, and note-taking features. The service is provided as-is, and we reserve the right to modify or discontinue features at any time.",
+    "userResponsibilities": "User Responsibilities",
+    "noIllegalActivities": "Do not use the service for illegal or harmful activities",
+    "respectUserPrivacy": "Respect the privacy and rights of other users",
+    "maintainAccountSecurity": "Maintain the security of your account and data",
+    "prohibitedUseEnforcement": "Prohibited Use and Enforcement",
+    "prohibitedUseEnforcementDesc": "Any illegal, fraudulent, abusive, or harmful use of the service is strictly prohibited. We reserve the absolute right to immediately suspend, blacklist, or permanently ban any user account without prior notice or explanation. This includes but is not limited to illegal activities, service abuse, terms violations, or any behavior we deem inappropriate.",
+    "accountSuspensionBanning": "Account Suspension and Banning",
+    "accountSuspensionBanningDesc": "We have the sole discretion to determine what constitutes a violation of these terms. Upon discovering any prohibited use, we may immediately and permanently ban your account, revoke access to all services, and forfeit any remaining subscription benefits without refund or compensation.",
+    "dataUsageRights": "Data Usage Rights",
+    "dataUsageRightsDesc": "By using our note features (Twitter notes and wallet notes), you grant us the right to use your note content to improve our services, enhance data accuracy, and develop new features. This usage helps us provide better services for all users.",
+    "serviceLimitations": "Service Limitations",
+    "serviceLimitationsDesc": "We strive to provide our services. We do not guarantee 100% uptime, data accuracy, or availability. Free users have usage limitations as specified in our pricing plans.",
+    "paymentRefundPolicy": "Payment and Refund Policy",
+    "paymentRefundPolicyDesc": "All premium subscription payments are final and non-refundable. We do not provide any form of refunds, credits, or prorated billing, including but not limited to service dissatisfaction, unused subscription periods, or account termination.",
+    "disclaimer": "Disclaimer",
+    "disclaimerDesc": "The service is provided on an as-is and as-available basis without any express or implied warranties. We disclaim all warranties, including but not limited to merchantability, fitness for a particular purpose, and non-infringement.",
+    "liabilityLimitation": "Limitation of Liability",
+    "liabilityLimitationDesc": "To the maximum extent permitted by law, we shall not be liable for any indirect, incidental, special, consequential, or punitive damages, including but not limited to loss of profits, data, or business opportunities arising from your use of the service.",
+    "finalInterpretationRights": "Final Interpretation Rights",
+    "finalInterpretationRightsDesc": "The company reserves the final right to interpret and explain all terms and conditions of this agreement. In case of any disputes or ambiguities, the company's interpretation shall prevail and be binding. All decisions regarding service use, account status, and terms violations are at the company's sole discretion.",
+    "contactInformation": "Contact Information",
+    "contactInformationDesc": "If you have any questions about this privacy policy or terms of service, please contact us through our official channels or GitHub repository.",
+    "versionInfo": "Version",
     "configurationSummary": "Configuration Summary",
     "configuredSettings": "Your extension has been configured with the following settings",
     "language": "Language",
@@ -181,7 +227,6 @@
     "contactSupport": "Contact & Support",
     "contactSupportDesc": "If you have any questions about these terms or need support, please contact us through:",
     "officialSupportChannels": "Official Support Channels: Telegram: https://t.me/Tw3Track",
-    "lastUpdated": "Last Updated",
     "version": "Version",
     "expiryDate": "Expiry Date (UTC)",
     "nextReset": "Query Reset Date",
@@ -261,7 +306,7 @@
     "loginRequired": "Please login first",
     "loginRequiredDesc": "Login to view KOL analysis data",
     "userInfo": "User Info",
-    "kolFollowing": "Following KOLs",
+    "kolFollowing": "KOL Followers",
     "followers": "Followers",
     "noData": "No data available",
     "autoQuery": "Auto Query Twitter Data",
@@ -269,7 +314,7 @@
     "cacheExpired": "Data cache expired, refreshing...",
     "serverError": "Server error, please try again later",
     "networkError": "Network error, please check your connection",
-    "kolCount": "Following {count} KOLs",
+    "kolCount": "{count} KOL followers",
     "showingTop": "Showing top {count} by followers",
     "lastUpdated": "Last updated: {time}",
     "refreshData": "Refresh Data",
@@ -307,10 +352,10 @@
     "viewDetails": "View Details",
     "kolList": "KOL List",
     "showKolList": "Show KOL List",
-    "showKolListDesc": "Display KOL following list in a separate card",
+    "showKolListDesc": "Display KOL followers in a separate card",
     "fromCache": "From cache",
     "scrollable": "(scrollable)",
-    "kolCard": "Following KOLs ({count})",
+    "kolCard": "KOL Followers ({count})",
     "noHistory": "No history",
     "walletCount": "{count} wallets",
     "walletDisclaimer": "*This address cannot be 100% confirmed as the user's wallet address, for reference only",
@@ -321,7 +366,7 @@
   },
   "emptyState": {
     "noKolData": "No KOL data available",
-    "kolDescription": "This user may not have any KOL follows, or data has not been collected yet",
+    "kolDescription": "No KOLs are following this account, or data has not been collected yet",
     "noHistoryData": "No history records",
     "historyDescription": "This user may not have any relevant history change records",
     "noWalletData": "No wallet addresses",
@@ -336,7 +381,7 @@
     "userHistoryTitle": "User History",
     "twitterNotesTitle": "Twitter Notes",
     "walletNotesTitle": "Wallet Notes",
-    "kolListTitle": "KOL Following List",
+    "kolListTitle": "KOL Followers List",
     "noData": "No data available",
     "waitingForData": "Waiting for data...",
     "userId": "User ID",
