--- a/src/locales/zh.json
+++ b/src/locales/zh.json
@@ -50,12 +50,12 @@
     "userInfo": "用户信息",
     "kolSettings": "KOL显示设置",
     "showKolList": "显示KOL列表",
-    "showKolListDesc": "在推特页面显示关注的KOL列表",
+    "showKolListDesc": "在推特页面显示KOL关注者列表",
     "twitterSettings": "Twitter 设置",
     "autoQueryTitle": "自动查询推特数据",
     "autoQueryDesc": "访问用户资料时自动显示数据",
     "showKolListTitle": "显示KOL列表",
-    "showKolListShortDesc": "显示关注的KOL列表"
+    "showKolListShortDesc": "显示KOL关注者列表"
   },
   "login": {
     "serverStatusCheck": "服务器状态检查",
@@ -147,6 +147,54 @@
     "usageGuidelines": "使用指南",
     "byUsingExtension": "使用本插件即表示您同意：",
     "termsAcknowledge": "勾选此框即表示您已阅读、理解并同意受这些条款约束。",
+    "privacyPolicy": "隐私政策",
+    "serviceTerms": "服务条款",
+    "lastUpdated": "最后更新",
+    "introduction": "简介",
+    "privacyIntro": "在 Tw3Track，我们致力于保护您的隐私。本隐私政策说明了您使用我们的浏览器扩展和服务时我们如何处理信息。",
+    "dataCollection": "数据收集",
+    "dataCollectionDesc": "我们不收集、存储或传输任何个人信息或敏感的浏览器数据。我们的扩展在您的设备上本地运行，尊重您的隐私。",
+    "noPersonalDataCollection": "不收集个人数据",
+    "noBrowsingHistory": "我们不访问您的浏览历史",
+    "noPersonalInfoCollection": "我们不收集个人信息",
+    "noOnlineTracking": "我们不跟踪您的在线活动",
+    "noSensitiveBrowserInfo": "我们不访问敏感的浏览器信息",
+    "localDataProcessing": "所有数据处理都在您的设备上本地进行",
+    "localDataStorage": "本地数据存储",
+    "localDataStorageDesc": "您创建的任何备注或注释都存储在您的浏览器本地。您可以完全控制这些数据，并可以随时导出或删除。",
+    "userNotesDataUsage": "用户备注数据使用",
+    "userNotesDataUsageDesc": "当您使用推特备注或钱包备注功能时，您的备注内容可能会被用于改善插件数据显示、增强服务功能以及提供更好的用户体验。这包括使用您的备注数据来提高数据准确性、开发新功能以及优化整体服务质量。使用这些功能即表示您同意此数据使用方式。",
+    "openSourceTransparency": "开源与透明",
+    "openSourceTransparencyDesc": "我们的扩展完全开源且可审计。您可以随时查看我们的代码来验证我们的隐私做法。",
+    "termsAcceptance": "条款接受",
+    "termsAcceptanceDesc": "通过下载、安装或使用 Tw3Track 浏览器扩展，您同意受这些服务条款的约束。如果您不同意这些条款，请不要使用我们的服务。",
+    "serviceDescription": "服务描述",
+    "serviceDescriptionDesc": "Tw3Track 是一个提供 Web3 推特分析、钱包追踪和备注功能的浏览器扩展。服务按现状提供，我们保留随时修改或停止功能的权利。",
+    "userResponsibilities": "用户责任",
+    "complianceWithLaws": "遵守适用的法律法规使用服务",
+    "noIllegalActivities": "不得将服务用于非法或有害活动",
+    "respectUserPrivacy": "尊重其他用户的隐私和权利",
+    "noReverseEngineering": "不得尝试逆向工程或修改扩展",
+    "maintainAccountSecurity": "维护您的账户和数据安全",
+    "prohibitedUseEnforcement": "禁止使用和执法",
+    "prohibitedUseEnforcementDesc": "严格禁止任何非法、欺诈、滥用或有害的服务使用行为。我们保留绝对权利立即暂停、拉黑或永久封禁任何用户账户，无需事先通知或解释。这包括但不限于非法活动、滥用服务、违反条款或我们认为不当的任何行为。",
+    "accountSuspensionBanning": "账户暂停和封禁",
+    "accountSuspensionBanningDesc": "我们拥有独自决定什么构成违反这些条款的权利。一旦发现任何禁止使用行为，我们可能立即永久封禁您的账户，撤销对所有服务的访问权限，并没收任何剩余的订阅权益，不予退款或补偿。",
+    "dataUsageRights": "数据使用权利",
+    "dataUsageRightsDesc": "通过使用我们的备注功能（推特备注和钱包备注），您授予我们使用您的备注内容来改善我们的服务、提高数据准确性和开发新功能的权利。这种使用有助于我们为所有用户提供更好的服务。",
+    "serviceLimitations": "服务限制",
+    "serviceLimitationsDesc": "我们尽力提供服务。我们不保证 100% 的正常运行时间、数据准确性或可用性。免费用户有我们定价计划中规定的使用限制。",
+    "paymentRefundPolicy": "付款和退款政策",
+    "paymentRefundPolicyDesc": "所有专业版订阅付款均为最终付款且不可退款。我们不提供任何形式的退款、积分或按比例计费，包括但不限于服务不满意、未使用的订阅期间或账户终止等原因。",
+    "disclaimer": "免责声明",
+    "disclaimerDesc": "服务按现状和现有基础提供，不提供任何明示或暗示的保证。我们否认所有保证，包括但不限于适销性、特定用途适用性和非侵权性。",
+    "liabilityLimitation": "责任限制",
+    "liabilityLimitationDesc": "在法律允许的最大范围内，我们不对任何间接、偶然、特殊、后果性或惩罚性损害承担责任，包括但不限于因您使用服务而产生的利润、数据或商业机会损失。",
+    "finalInterpretationRights": "最终解释权",
+    "finalInterpretationRightsDesc": "本公司保留对本协议所有条款和条件的最终解释权和说明权。如有任何争议或歧义，以本公司的解释为准且具有约束力。关于服务使用、账户状态和条款违反的所有决定均由本公司全权决定。",
+    "contactInformation": "联系信息",
+    "contactInformationDesc": "如果您对本隐私政策或服务条款有任何疑问，请通过我们的官方渠道或 GitHub 仓库联系我们。",
+    "versionInfo": "版本",
     "configurationSummary": "配置摘要",
     "configuredSettings": "您的插件已配置以下设置",
     "language": "语言",
@@ -168,8 +216,6 @@
     "accessDashboard": "通过插件弹窗访问仪表板",
     "exploreFeatures": "探索Web3趋势和自定义设置",
     "changePreferences": "您可以随时在设置中更改语言和主题偏好",
-    "complianceWithLaws": "遵守所有适用的法律法规使用插件",
-    "noReverseEngineering": "不尝试逆向工程或修改插件",
     "respectRateLimits": "遵守API速率限制和使用配额",
     "noMaliciousUse": "不将插件用于任何恶意或有害活动",
     "keepTokensSecure": "保护您的API令牌安全，不与他人共享",
@@ -181,7 +227,6 @@
     "contactSupport": "联系与支持",
     "contactSupportDesc": "如果您对这些条款有任何疑问或需要支持，请通过以下方式联系我们：",
     "officialSupportChannels": "官方支持渠道: Telegram: https://t.me/Tw3Track",
-    "lastUpdated": "最后更新",
     "version": "版本",
     "expiryDate": "到期日期(UTC)",
     "nextReset": "查询重置日期",
@@ -269,7 +314,7 @@
     "cacheExpired": "数据缓存已过期，正在刷新...",
     "serverError": "服务器错误，请稍后重试",
     "networkError": "网络错误，请检查网络连接",
-    "kolCount": "关注了 {count} 个KOL",
+    "kolCount": "被 {count} 个KOL关注",
     "showingTop": "显示粉丝数前 {count} 位",
     "lastUpdated": "最后更新: {time}",
     "refreshData": "刷新数据",
@@ -307,10 +352,10 @@
     "viewDetails": "查看详情",
     "kolList": "KOL列表",
     "showKolList": "显示KOL列表",
-    "showKolListDesc": "在独立卡片中显示KOL关注列表",
+    "showKolListDesc": "在独立卡片中显示KOL关注者列表",
     "fromCache": "来自缓存",
     "scrollable": "(可滚动查看)",
-    "kolCard": "关注的KOL ({count}个)",
+    "kolCard": "KOL关注者 ({count}个)",
     "noHistory": "暂无历史",
     "walletCount": "{count}个钱包",
     "walletDisclaimer": "*该地址不能百分百确认为用户的钱包地址，仅供参考",
@@ -322,7 +367,7 @@
   },
   "emptyState": {
     "noKolData": "暂无KOL数据",
-    "kolDescription": "该用户可能没有任何KOL关注,或数据尚未收录",
+    "kolDescription": "没有任何KOL关注此账户,或数据尚未收录",
     "noHistoryData": "暂无历史记录",
     "historyDescription": "该用户可能没有相关的历史变更记录",
     "noWalletData": "暂无钱包地址",
@@ -337,7 +382,7 @@
     "userHistoryTitle": "用户历史",
     "twitterNotesTitle": "Twitter 备注",
     "walletNotesTitle": "钱包备注",
-    "kolListTitle": "KOL 关注列表",
+    "kolListTitle": "KOL 关注者列表",
     "noData": "暂无数据",
     "waitingForData": "等待数据中...",
     "userId": "用户ID",
