✨feat: 添加实时CA 初版 ✨feat: 添加CA热榜 初版

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -31,7 +31,8 @@
     "loadMore": "Load More",
     "cached": "Cached",
     "comingSoon": "Coming Soon",
-    "subscriptionRequired": "This feature requires a subscription"
+    "subscriptionRequired": "This feature requires a subscription",
+    "custom": "Custom"
   },
   "userInfo": {
     "used": "Used",
@@ -40,7 +41,8 @@
     "followTrends": "Follow Trends",
     "deletionReminder": "Deletion Reminder",
     "nextResetDate": "Next Reset Date",
-    "expiryDate": "Expiry Date"
+    "expiryDate": "Expiry Date",
+    "followers":"Followers"
   },
   "popup": {
     "welcome": "Welcome to Tw3Track!",
@@ -329,7 +331,7 @@
     "loadingAnalysis": "Analyzing...",
     "dataLoadFailed": "Data loading failed, please try again later",
     "socialStats": "Social Stats",
-    "tokenAnalysis": "Token Analysis Launch Count/Success Rate",
+    "tokenAnalysis": "chain activity: launch/success rate",
     "nameChanges": "Name Changes",
     "screenNameChanges": "Username Changes",
     "followEvents": "Follow Events",
@@ -338,6 +340,13 @@
     "raydiumTokens": "Raydium Tokens",
     "clickToView": "Click to view",
     "chainDataDisclaimer": "On-chain data is for reference only and does not constitute investment advice",
+    "caStats": "CA History Statistics",
+    "caToday": "Today",
+    "ca7Days": "7 Days",
+    "ca30Days": "30 Days",
+    "caTotal": "Total",
+    "caStatsNote": "CA statistics: Published/Deleted",
+    "deletedTweets": "Deleted Tweets",
     "userNotFound": "No data record found for this user",
     "refresh": "Refresh Data",
     "collapse": "Collapse",
@@ -445,6 +454,77 @@
     "someAccountsHidden": "Some accounts are private and cannot be displayed",
     "newFollowers": "New Followers",
     "gotoProfile": "Go to Profile"
+  },
+  "caLeaderboard": {
+    "title": "CA Leaderboard",
+    "description": "Real-time tracking of the hottest cryptocurrency tokens",
+    "network": "Network",
+    "timeRange": "Time Range",
+    "sortBy": "Sort By",
+    "displayCount": "Display Count",
+    "quickSelect": "Quick Select",
+    "lastHour": "Last Hour",
+    "last6Hours": "Last 6 Hours",
+    "today": "Today",
+    "last24Hours": "Last 24 Hours",
+    "totalMentions": "Total Mentions",
+    "changeRate": "Change Rate",
+    "activeUsers": "Active Users",
+    "minuteStats": "Minute Stats",
+    "firstMentioned": "First Mentioned",
+    "lastMentioned": "Last Mentioned",
+    "avgMentionsPerUser": "Avg Mentions Per User",
+    "copyAddress": "Copy Address",
+    "addressCopied": "Address Copied",
+    "noData": "No Data",
+    "noDataDesc": "No relevant token data found under current filter conditions",
+    "loadingData": "Loading data...",
+    "refreshData": "Refresh Data",
+    "dataUpdated": "Data Updated",
+    "updateFailed": "Data update failed",
+    "networkError": "Network connection failed, please check network settings",
+    "timeoutError": "Request timeout, please try again later",
+    "authRequired": "Please login first and try again",
+    "serverError": "Server error",
+    "unknownError": "Unknown error",
+    "justUpdated": "Just updated",
+    "minutesAgo": "minutes ago",
+    "hoursAgo": "hours ago",
+    "updating": "Updating...",
+    "foundTokens": "Found {count} tokens",
+    "dex": "Trade",
+    "explorer": "Explorer",
+    "tweets": "Tweets",
+    "hour": "Hour",
+    "day": "Day",
+    "refresh": "Refresh",
+    "loading": "Loading...",
+    "loadFailed": "Load Failed",
+    "customTimeRange": "Custom Time Range",
+    "last1Day": "Last 1 Day",
+    "last3Days": "Last 3 Days",
+    "last7Days": "Last 7 Days",
+    "last30Days": "Last 30 Days",
+    "startTime": "Start Time",
+    "endTime": "End Time",
+    "timeInterval": "Time Interval",
+    "timeSpan": "Time Span",
+    "timeRangeError": "Please ensure start time is earlier than end time",
+    "today": "Today",
+    "last24Hours": "Last 24 Hours",
+    "changeRate": "Change Rate",
+    "healthyHeat": "Healthy Heat",
+    "healthyHeatDesc": "Most users mention only once, indicating genuine natural discussion",
+    "moderateHeat": "Moderate Heat",
+    "moderateHeatDesc": "Some users mention multiple times, needs attention",
+    "suspiciousHeat": "Suspicious Heat",
+    "suspiciousHeatDesc": "Few users mention repeatedly, possible bot activity",
+    "lowValue": "Low Value(≤1.2)",
+    "mediumValue": "Medium Value(1.2-2.5)",
+    "highValue": "High Value(>2.5)",
+    "genuineDiscussion": "genuine discussion",
+    "needsAttention": "needs attention",
+    "possibleBotActivity": "possible bot activity"
   },
   "about": {
     "subtitle": "Twitter Web3 Data Tracking Extension",
@@ -670,6 +750,15 @@
     "deleteConfirm": "Are you sure you want to delete this note?",
     "noRestId": "Click the note button next to the Twitter username to edit notes"
   },
+  "deletedTweets": {
+    "fetchError": "Failed to fetch deleted tweets data",
+    "copyAddress": "Copy {network} address: {address}",
+    "total": "Total",
+    "expected": "Expected",
+    "published": "Published",
+    "deleted": "Deleted",
+    "noData": "No deleted tweets data available"
+  },
   "settings": {
     "title": "Settings",
     "tabs": {
@@ -812,5 +901,195 @@
     "noteDeleted": "Wallet note deleted",
     "deleteNote": "Delete Note",
     "confirmDelete": "Are you sure you want to delete this note?"
+  },
+  "realtimeCA": {
+    "title": "Realtime CA",
+    "description": "Real-time CA event monitoring",
+    "controls": {
+      "realtimePanel": "Realtime Panel",
+      "dataCache": "Data Cache",
+      "settings": "Settings",
+      "clear": "Clear",
+      "pause": "Pause",
+      "resume": "Resume",
+      "filters": "Filters",
+      "pauseTooltip": "Pause data rendering",
+      "resumeTooltip": "Resume data rendering"
+    },
+    "status": {
+      "connecting": "Connecting...",
+      "connected": "Connected",
+      "disconnected": "Disconnected",
+      "error": "Connection Error",
+      "reconnecting": "Reconnecting...",
+      "connectingDesc": "Connecting to WebSocket server...",
+      "reconnectingDesc": "Connection lost, attempting to reconnect...",
+      "errorDesc": "Connection failed, please check network or try again later",
+      "disconnectedDesc": "Not connected to server, click connect button to start receiving real-time data"
+    },
+    "settings": {
+      "title": "Realtime CA Monitor Settings",
+      "description": "Configure realtime CA monitoring behavior and preferences",
+      "connectionSettings": "Connection Settings",
+      "autoConnect": "Auto Connect",
+      "autoRetry": "Auto Retry",
+      "cacheSettings": "Cache Settings",
+      "maxCacheSize": "Max Cache Size",
+      "cacheExpiry": "Cache Expiry Days",
+      "recommendedValue": "Recommended: 500-1000",
+      "subscriptionSettings": "Subscription Settings",
+      "network": "Network",
+      "minFollowers": "Min Followers",
+      "keywords": "Keywords Filter",
+      "contractAddresses": "Contract Addresses",
+      "blacklist": "User Blacklist",
+      "keywordsPlaceholder": "Enter keywords, separated by commas",
+      "addressesPlaceholder": "Enter contract addresses, separated by commas",
+      "blacklistPlaceholder": "Enter user IDs, separated by commas",
+      "cacheManagement": "Cache Management",
+      "currentCacheCount": "Current Cache Count",
+      "currentCache": "Current Cache",
+      "cacheRecords": "{count} records",
+      "clearCache": "Clear Cache",
+      "clearCacheDesc": "Clear all cached CA event data",
+      "saveSettings": "Save Settings"
+    },
+    "filters": {
+      "title": "Filters",
+      "description": "Set filter conditions to screen CA events.",
+      "connectedWarning": "Saving while connected will resubscribe.",
+      "basicConfig": "Basic Configuration",
+      "network": "Monitor Network",
+      "minFollowers": "Min Followers (≥100)",
+      "contentFilter": "Content Filter",
+      "keywords": "Include Keywords",
+      "keywordsPlaceholder": "Enter keywords...",
+      "contractAddresses": "Contract Address Whitelist",
+      "contractPlaceholder": "Enter contract address...",
+      "blacklist": "User ID Blacklist",
+      "blacklistPlaceholder": "Enter user ID...",
+      "add": "Add",
+      "tokenMentionFilter": "Token Mention Filter",
+      "minTotalMentions": "Min Total Mentions",
+      "minUniqueUsers": "Min Unique Users",
+      "recent5MinMentions": "Recent 5min Mentions",
+      "recent1HourMentions": "Recent 1hour Mentions",
+      "userQualityFilter": "User Quality Filter",
+      "maxUsernameChanges": "Max Username Changes",
+      "maxNameChanges": "Max Name Changes",
+      "requireDescription": "Require User Description",
+      "tokenQualityFilter": "Token Quality Filter",
+      "requireTokenDescription": "Require Token Description",
+      "requireTokenImage": "Require Token Image",
+      "requireTokenTwitter": "Require Twitter Link",
+      "requireTokenWebsite": "Require Website Link",
+      "reset": "Reset",
+      "saveAndApply": "Save & Apply",
+      "allNetworks": "All Networks",
+      "noLimit": "No Limit"
+    },
+    "search": {
+      "title": "Search Cache Data",
+      "placeholder": "Search users, tweet content, token symbols or contract addresses...",
+      "searchButton": "Search",
+      "searching": "Searching...",
+      "searchScope": "Search Scope:",
+      "searchType": "Search Type",
+      "all": "All",
+      "user": "User",
+      "token": "Token",
+      "content": "Content",
+      "resultsFound": "Found {count} results (out of {total} cached data)",
+      "noResults": "No matching results found"
+    },
+    "export": {
+      "exportData": "Export Data",
+      "exportCSV": "Export CSV",
+      "exportJSON": "Export JSON",
+      "copyToClipboard": "Copy to Clipboard",
+      "includeMetadata": "Include Metadata",
+      "noDataToExport": "No data to export",
+      "exportSuccess": "Export successful",
+      "exportFailed": "Export failed",
+      "copiedToClipboard": "Copied to clipboard"
+    },
+    "list": {
+      "waitingData": "Waiting for real-time data",
+      "waitingDesc": "Connection established, waiting for CA events...",
+      "noData": "No data available",
+      "noDataDesc": "No CA event data currently available",
+      "loadMore": "Load More",
+      "pendingUpdates": "pending updates"
+    },
+    "item": {
+      "followers": "followers",
+      "nameChanges": "renamed",
+      "usernameChanges": "username changed",
+      "posterHistory": "📊 Poster CA History:",
+      "onchainCA": "🔗 Onchain CA:",
+      "today": "Today",
+      "last7Days": "7 days",
+      "last30Days": "30 days",
+      "total": "Total",
+      "deleted": "🗑️ Deleted:",
+      "launch": "Launch",
+      "migrate": "Migrate",
+      "noOnchainActivity": "No onchain activity",
+      "tweetContent": "📝 Tweet Content",
+      "tokenInfo": "🪙 Token Info Area - Multi-token Tabs Support",
+      "multiTokenTabs": "Multi-token Tabs",
+      "currentTokenInfo": "Current Selected Token Info",
+      "tokenBasicInfo": "Token Basic Info",
+      "beforePostHeat": "📊 Pre-post Heat:",
+      "totalMentions": "Total Mentions",
+      "users": "Users",
+      "minutes5": "5 min:",
+      "minutes20": "20 min:",
+      "minutes30": "30 min:",
+      "hour1": "1 hour:",
+      "tokenLinks": "🔗 Token Links",
+      "mentionedUsers": "👥 Mentioned Users - Compact Display",
+      "firstMention": "🥇 First",
+      "latestMention": "🕐 Latest",
+      "chart": "📊 Chart",
+      "copyTokenAddress": "Click to copy token address",
+      "firstLaunch": "First Launch",
+      "times": " times"
+    },
+    "stats": {
+      "cacheCount": "Cache Count",
+      "realtimeCount": "Realtime Count",
+      "connectionTime": "Connection Time",
+      "lastUpdate": "Last Update"
+    },
+    "module": {
+      "title": "Realtime CA Monitor",
+      "upgradeRequired": "This feature is only available for paid users. Please upgrade your subscription to unlock realtime CA monitoring.",
+      "connected": "Connected",
+      "disconnected": "Disconnected",
+      "connecting": "Connecting...",
+      "reconnecting": "Reconnecting...",
+      "disconnect": "Disconnect",
+      "startMonitoring": "Start Monitoring",
+      "pauseRendering": "⏸️ Pause Data Rendering",
+      "resumeRendering": "▶️ Resume Data Rendering",
+      "autoConnectLog": "🔄 First visit to realtime CA page, auto connecting...",
+      "manualDisconnectLog": "🔌 Manually disconnecting WebSocket...",
+      "manualConnectLog": "🔗 Manually connecting WebSocket...",
+      "switchToRealtimeLog": "🔄 Switching to realtime mode, auto connecting...",
+      "hotTokensBanner": "Hot Tokens Banner - Always visible, based on cache data",
+      "controlPanel": "Control Panel",
+      "filtersComponent": "Filters Component - Next to settings button",
+      "searchComponent": "Search Component - Only visible in cache mode",
+      "eventsList": "Events List",
+      "hoverPauseHint": "Hover Pause Hint - Silent display, no text",
+      "settingsDialog": "Settings Dialog"
+    },
+    "tokenBanner": {
+      "hotTokens": "Hot Tokens",
+      "waitingData": "Waiting for CA event data...",
+      "realtime": "Realtime",
+      "dataCount": "{count} items"
+    }
   }
 }
