--- a/src/locales/zh.json
+++ b/src/locales/zh.json
@@ -31,7 +31,8 @@
     "loadMore": "加载更多",
     "cached": "缓存",
     "comingSoon": "即将推出",
-    "subscriptionRequired": "此功能需要会员订阅"
+    "subscriptionRequired": "此功能需要会员订阅",
+    "custom": "自定义"
   },
   "userInfo":{
     "used":"已使用",
@@ -40,7 +41,8 @@
     "followTrends":"关注趋势",
     "deletionReminder":"删除提醒",
     "nextResetDate":"下次重置日期",
-    "expiryDate":"到期日期"
+    "expiryDate":"到期日期",
+    "followers":"关注者"
   },
   "popup": {
     "welcome": "欢迎使用Tw3Track！",
@@ -329,7 +331,7 @@
     "loadingAnalysis": "正在分析...",
     "dataLoadFailed": "数据加载失败，请稍后重试",
     "socialStats": "社交统计",
-    "tokenAnalysis": "代币分析 发射数量/成功率",
+    "tokenAnalysis": "链上活动 发射数量/成功率",
     "nameChanges": "改名次数",
     "screenNameChanges": "用户名变更",
     "followEvents": "关注事件",
@@ -338,6 +340,13 @@
     "raydiumTokens": "Raydium代币",
     "clickToView": "点击查看",
     "chainDataDisclaimer": "链上数据仅供参考，不构成投资建议",
+    "caStats": "CA历史统计",
+    "caToday": "今日",
+    "ca7Days": "7天",
+    "ca30Days": "30天",
+    "caTotal": "总计",
+    "caStatsNote": "CA统计：发布/删除",
+    "deletedTweets": "删除的推文",
     "userNotFound": "暂无此用户的数据记录",
     "refresh": "刷新数据",
     "collapse": "收起",
@@ -446,6 +455,77 @@
     "someAccountsHidden": "部分账号未公开，无法展示",
     "newFollowers": "新关注",
     "gotoProfile": "访问主页"
+  },
+  "caLeaderboard": {
+    "title": "CA热榜",
+    "description": "实时追踪最热门的加密货币代币",
+    "network": "网络",
+    "timeRange": "时间范围",
+    "sortBy": "排序方式",
+    "displayCount": "显示数量",
+    "quickSelect": "快速选择",
+    "lastHour": "最近1小时",
+    "last6Hours": "最近6小时",
+    "today": "今日",
+    "last24Hours": "最近24小时",
+    "totalMentions": "总提及数",
+    "changeRate": "涨跌幅",
+    "activeUsers": "活跃用户数",
+    "minuteStats": "分钟统计",
+    "firstMentioned": "首次提及",
+    "lastMentioned": "最新提及",
+    "avgMentionsPerUser": "平均每用户提及",
+    "copyAddress": "复制地址",
+    "addressCopied": "地址已复制",
+    "noData": "暂无数据",
+    "noDataDesc": "当前筛选条件下没有找到相关的代币数据",
+    "loadingData": "正在加载数据...",
+    "refreshData": "刷新数据",
+    "dataUpdated": "数据已更新",
+    "updateFailed": "数据更新失败",
+    "networkError": "网络连接失败，请检查网络设置",
+    "timeoutError": "请求超时，请稍后重试",
+    "authRequired": "请先登录后重试",
+    "serverError": "服务器错误",
+    "unknownError": "未知错误",
+    "justUpdated": "刚刚更新",
+    "minutesAgo": "分钟前",
+    "hoursAgo": "小时前",
+    "updating": "更新中...",
+    "foundTokens": "共找到 {count} 个代币",
+    "dex": "交易",
+    "explorer": "浏览器",
+    "tweets": "推文",
+    "hour": "小时",
+    "day": "天",
+    "refresh": "刷新",
+    "loading": "加载中...",
+    "loadFailed": "加载失败",
+    "customTimeRange": "自定义时间范围",
+    "last1Day": "最近1天",
+    "last3Days": "最近3天",
+    "last7Days": "最近7天",
+    "last30Days": "最近30天",
+    "startTime": "开始时间",
+    "endTime": "结束时间",
+    "timeInterval": "时间间隔",
+    "timeSpan": "时间跨度",
+    "timeRangeError": "请确保开始时间早于结束时间",
+    "today": "今日",
+    "last24Hours": "最近24小时",
+    "changeRate": "涨跌幅",
+    "healthyHeat": "健康热度",
+    "healthyHeatDesc": "大多数用户只提及1次，热度真实自然",
+    "moderateHeat": "一般热度",
+    "moderateHeatDesc": "部分用户多次提及，需要关注",
+    "suspiciousHeat": "可疑热度",
+    "suspiciousHeatDesc": "少数用户大量重复提及，可能存在刷量",
+    "lowValue": "低值(≤1.2)",
+    "mediumValue": "中值(1.2-2.5)",
+    "highValue": "高值(>2.5)",
+    "genuineDiscussion": "真实讨论",
+    "needsAttention": "需关注",
+    "possibleBotActivity": "可能刷量"
   },
   "about": {
     "subtitle": "Twitter Web3 数据追踪扩展",
@@ -671,6 +751,15 @@
     "deleteConfirm": "确定要删除这个备注吗？",
     "noRestId": "点击Twitter用户名旁边的备注按钮来编辑备注"
   },
+  "deletedTweets": {
+    "fetchError": "获取删除推文数据失败",
+    "copyAddress": "复制{network}地址: {address}",
+    "total": "总计",
+    "expected": "预期",
+    "published": "发布",
+    "deleted": "删除",
+    "noData": "暂无删除的推文数据"
+  },
   "settings": {
     "title": "设置",
     "tabs": {
@@ -813,5 +902,195 @@
     "noteDeleted": "钱包备注已删除",
     "deleteNote": "删除备注",
     "confirmDelete": "确认删除这条备注吗？"
+  },
+  "realtimeCA": {
+    "title": "实时CA",
+    "description": "实时监控CA事件",
+    "controls": {
+      "realtimePanel": "实时面板",
+      "dataCache": "数据缓存",
+      "settings": "设置",
+      "clear": "清理",
+      "pause": "暂停",
+      "resume": "恢复",
+      "filters": "过滤器",
+      "pauseTooltip": "暂停数据渲染",
+      "resumeTooltip": "恢复数据渲染"
+    },
+    "status": {
+      "connecting": "连接中...",
+      "connected": "已连接",
+      "disconnected": "未连接",
+      "error": "连接失败",
+      "reconnecting": "重连中...",
+      "connectingDesc": "正在连接WebSocket服务器...",
+      "reconnectingDesc": "连接断开，正在尝试重连...",
+      "errorDesc": "连接失败，请检查网络或稍后重试",
+      "disconnectedDesc": "未连接到服务器，点击连接按钮开始接收实时数据"
+    },
+    "settings": {
+      "title": "实时CA监控设置",
+      "description": "配置实时CA监控的行为和偏好设置",
+      "connectionSettings": "连接设置",
+      "autoConnect": "自动连接",
+      "autoRetry": "自动重连",
+      "cacheSettings": "缓存设置",
+      "maxCacheSize": "最大缓存数量",
+      "cacheExpiry": "缓存过期天数",
+      "recommendedValue": "建议值：500-1000",
+      "subscriptionSettings": "订阅设置",
+      "network": "网络",
+      "minFollowers": "最小粉丝数",
+      "keywords": "关键词过滤",
+      "contractAddresses": "合约地址",
+      "blacklist": "用户黑名单",
+      "keywordsPlaceholder": "输入关键词，用逗号分隔",
+      "addressesPlaceholder": "输入合约地址，用逗号分隔",
+      "blacklistPlaceholder": "输入用户ID，用逗号分隔",
+      "cacheManagement": "缓存管理",
+      "currentCacheCount": "当前缓存数量",
+      "currentCache": "当前缓存",
+      "cacheRecords": "{count} 条记录",
+      "clearCache": "清空缓存",
+      "clearCacheDesc": "清理所有缓存的CA事件数据",
+      "saveSettings": "保存设置"
+    },
+    "filters": {
+      "title": "过滤器",
+      "description": "设置过滤条件来筛选CA事件。",
+      "connectedWarning": "连接状态下保存将重新订阅。",
+      "basicConfig": "基础配置",
+      "network": "监控网络",
+      "minFollowers": "最小粉丝数 (≥100)",
+      "contentFilter": "内容过滤",
+      "keywords": "包含关键词",
+      "keywordsPlaceholder": "输入关键词...",
+      "contractAddresses": "合约地址白名单",
+      "contractPlaceholder": "输入合约地址...",
+      "blacklist": "用户ID黑名单",
+      "blacklistPlaceholder": "输入用户ID...",
+      "add": "添加",
+      "tokenMentionFilter": "代币提及过滤",
+      "minTotalMentions": "最小总提及数",
+      "minUniqueUsers": "最小独立用户数",
+      "recent5MinMentions": "最近5分钟提及",
+      "recent1HourMentions": "最近1小时提及",
+      "userQualityFilter": "用户质量过滤",
+      "maxUsernameChanges": "最大用户名修改次数",
+      "maxNameChanges": "最大昵称修改次数",
+      "requireDescription": "要求用户有描述",
+      "tokenQualityFilter": "代币质量过滤",
+      "requireTokenDescription": "要求有代币描述",
+      "requireTokenImage": "要求有代币图片",
+      "requireTokenTwitter": "要求有Twitter链接",
+      "requireTokenWebsite": "要求有官网链接",
+      "reset": "重置",
+      "saveAndApply": "保存并应用",
+      "allNetworks": "所有网络",
+      "noLimit": "无限制"
+    },
+    "search": {
+      "title": "搜索缓存数据",
+      "placeholder": "搜索用户、推文内容、代币符号或合约地址...",
+      "searchButton": "搜索",
+      "searching": "搜索中...",
+      "searchScope": "搜索范围:",
+      "searchType": "搜索类型",
+      "all": "全部",
+      "user": "用户",
+      "token": "代币",
+      "content": "内容",
+      "resultsFound": "找到 {count} 条结果 (共 {total} 条缓存数据)",
+      "noResults": "未找到匹配的结果"
+    },
+    "export": {
+      "exportData": "导出数据",
+      "exportCSV": "导出CSV",
+      "exportJSON": "导出JSON",
+      "copyToClipboard": "复制到剪贴板",
+      "includeMetadata": "包含元数据",
+      "noDataToExport": "没有数据可导出",
+      "exportSuccess": "导出成功",
+      "exportFailed": "导出失败",
+      "copiedToClipboard": "已复制到剪贴板"
+    },
+    "list": {
+      "waitingData": "等待实时数据",
+      "waitingDesc": "连接已建立，等待CA事件...",
+      "noData": "暂无数据",
+      "noDataDesc": "当前没有CA事件数据",
+      "loadMore": "加载更多",
+      "pendingUpdates": "条待更新"
+    },
+    "item": {
+      "followers": "粉丝",
+      "nameChanges": "改名",
+      "usernameChanges": "用户名",
+      "posterHistory": "📊 发帖人CA历史:",
+      "onchainCA": "🔗 链上CA:",
+      "today": "今日",
+      "last7Days": "7天",
+      "last30Days": "30天",
+      "total": "总计",
+      "deleted": "🗑️ 删除:",
+      "launch": "发射",
+      "migrate": "迁移",
+      "noOnchainActivity": "无链上活动",
+      "tweetContent": "📝 推文内容",
+      "tokenInfo": "🪙 代币信息区 - 支持多代币标签页",
+      "multiTokenTabs": "多代币标签页",
+      "currentTokenInfo": "当前选中的代币信息",
+      "tokenBasicInfo": "代币基本信息",
+      "beforePostHeat": "📊 发帖前热度:",
+      "totalMentions": "总提及",
+      "users": "用户",
+      "minutes5": "5分钟:",
+      "minutes20": "20分钟:",
+      "minutes30": "30分钟:",
+      "hour1": "1小时:",
+      "tokenLinks": "🔗 代币链接",
+      "mentionedUsers": "👥 提及用户 - 紧凑显示",
+      "firstMention": "🥇 首次",
+      "latestMention": "🕐 最新",
+      "chart": "📊 Chart",
+      "copyTokenAddress": "点击复制代币地址",
+      "firstLaunch": "首发",
+      "times": "次"
+    },
+    "stats": {
+      "cacheCount": "缓存数量",
+      "realtimeCount": "实时数量",
+      "connectionTime": "连接时长",
+      "lastUpdate": "最后更新"
+    },
+    "module": {
+      "title": "实时CA监控",
+      "upgradeRequired": "此功能仅限付费用户使用，请升级您的订阅以解锁实时CA监控功能。",
+      "connected": "已连接",
+      "disconnected": "未连接",
+      "connecting": "连接中...",
+      "reconnecting": "重连中...",
+      "disconnect": "断开连接",
+      "startMonitoring": "开始监控",
+      "pauseRendering": "⏸️ 暂停数据渲染",
+      "resumeRendering": "▶️ 恢复数据渲染",
+      "autoConnectLog": "🔄 首次访问实时CA页面，自动连接...",
+      "manualDisconnectLog": "🔌 手动断开WebSocket连接...",
+      "manualConnectLog": "🔗 手动连接WebSocket...",
+      "switchToRealtimeLog": "🔄 切换到实时模式，自动连接...",
+      "hotTokensBanner": "热门代币横幅 - 始终显示，基于缓存数据",
+      "controlPanel": "控制面板",
+      "filtersComponent": "过滤器组件 - 放在设置按钮旁边",
+      "searchComponent": "搜索组件 - 只在缓存模式下显示",
+      "eventsList": "事件列表",
+      "hoverPauseHint": "悬停暂停提示 - 静默显示，不显示文字",
+      "settingsDialog": "设置对话框"
+    },
+    "tokenBanner": {
+      "hotTokens": "热门代币",
+      "waitingData": "等待CA事件数据...",
+      "realtime": "实时",
+      "dataCount": "{count}条"
+    }
   }
 }
